fixing "win screen: blur is not working" Chrome on iPhone bug

--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,7 @@ body
 
 #overlay
 {
+	-webkit-backdrop-filter: blur(10px);
 	backdrop-filter: blur(10px);
 	position: fixed;
 	top: 0;
